fix(app): text wrap balance !

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -28,7 +28,7 @@ body {
   transition: all ease 0.64s;
   cursor: none !important;
 
-
+  text-wrap: balance;
 }
 
 body {
